tests/compiler/incompleteDottedExpressionAtEOF/index.ts
// From `github.com/microsoft/TypeScript/blob/v6.0.2/tests/cases/compiler/incompleteDottedExpressionAtEOF.ts`, Apache-2.0 License

//@compiler-options: target=es2015

var p2 = window. 
//~ ERROR: Identifier expected.